tdf#138486 Artifacts in some impress templates

fields need to be signed

regression from
    commit 548d77d0c06f7088dd3eb408797aa1fc1d7eb277
    Author: Noel <noelgrandin@gmail.com>
    Date:   Fri Nov 13 10:23:36 2020 +0200
    tools::Long->sal_uInt16 in ImpErrorQuad

Change-Id: Ia2a70d55d9af2ea3712ace3394c0de3931bee95c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106709
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 31f2b4b23e5d16c1b04035f08ebbb11c1abf62e3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106735